--- a/GraphChallenge/pom.xml
+++ b/GraphChallenge/pom.xml
@@ -7,6 +7,12 @@
     <groupId>info.etonline.challenges</groupId>
     <artifactId>graphs</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -15,6 +21,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 </project>
